Closed
Bug 235537
Opened 22 years ago
Closed 22 years ago
Crash while opening the Downloadmanager
Categories
(Core :: Graphics: ImageLib, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.7beta
People
(Reporter: Matti, Assigned: Biesinger)
References
()
Details
(Keywords: crash)
Attachments
(2 files)
|
4.25 KB,
text/plain
|
Details | |
|
1.08 KB,
patch
|
neil
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
win2k build 20040224
I got this a few time during the last weeks and I always fixed it by deleting the
downloads.rdf in the profile...
Steps to reproduce:
1) download http://matti.no-ip.org/downloads.zip
2) put the "downlods.rdf" in your profile and replace the exiting one
3) start Mozilla and open the Downloadmanager -> crash
Top 2 lines from teh stack :
nsInputStreamPump::AsyncRead(nsInputStreamPump * const 0x02d9f890,
nsIStreamListener * 0x02d9f85c, nsISupports * 0x00000000) line 247 + 8 bytes
nsIconChannel::AsyncOpen(nsIconChannel * const 0x00000000, nsIStreamListener *
0x029009f0, nsISupports * 0x00000000) line 210
Trying Networking first :-)
| Reporter | ||
Comment 1•22 years ago
|
||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.7beta
Comment 2•22 years ago
|
||
I have had a lookalike crash in January, posted it in d.c.s.m.nb
<btj4d5$ifk$06$1@news.t-online.com> with a small non-debugger stack.
In Matti's downloads.rdf I have deleted (o.k., little dirty) omly the line:
<RDF:li
RDF:resource="file:///C:/Dokumente%20und%20Einstellungen/matti/Anwendungsdaten/Mozilla/Profiles/Matti2/gnj7ycwv.slt/\\SERVER600\c\Programme\xitami\webpages\schugga.html"/>
and mozilla is not crashing again while opening the downloadmanager.
| Assignee | ||
Comment 3•22 years ago
|
||
so the problem was: MakeInputStream failed to create a stream, but returned
success. but the stream was null. that was bad :)
fix: return an error.
Assignee: darin → cbiesinger
| Assignee | ||
Updated•22 years ago
|
Attachment #142360 -
Flags: superreview?(darin)
Attachment #142360 -
Flags: review?(neil.parkwaycc.co.uk)
| Assignee | ||
Updated•22 years ago
|
Component: Networking → ImageLib
Comment 4•22 years ago
|
||
Comment on attachment 142360 [details] [diff] [review]
patch
Bonus points if you can make the channel handle bogus files more usefully ;-)
Attachment #142360 -
Flags: review?(neil.parkwaycc.co.uk) → review+
Updated•22 years ago
|
Attachment #142360 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 5•22 years ago
|
||
Checking in win/nsIconChannel.cpp;
/cvsroot/mozilla/modules/libpr0n/decoders/icon/win/nsIconChannel.cpp,v <--
nsIconChannel.cpp
new revision: 1.31; previous revision: 1.30
done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 233503 has been marked as a duplicate of this bug. ***
*** Bug 232000 has been marked as a duplicate of this bug. ***
*** Bug 230362 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•