bug 235537 r=neil sr=darin Always return an error code when MakeInputStream fails, instead of just returning a null stream